fix: Content Security Policy

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <script src="static/marked.min.js"></script>
     <div class="top_float_bar">
         <span id="logo_text"></span>
         <span id="version_selector">
